day3/node-select.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ashupod1
  name: ashupod1
spec:
  #nodeName: ip-192-168-37-197.ap-south-1.compute.internal
  nodeSelector: # selecting node on behalf of given labels 
    roche-env: ashutoshh 
  imagePullSecrets:
  - name: ashu-acr-creds
  containers:
  - image: rocheashutoshh.azurecr.io/ashuwebapp:v1health
    name: ashupod1
    ports:
    - containerPort: 80
    resources: {}
    readinessProbe: # to check if app is ready to serve traffic
      httpGet:
        path: /health.html 
        port: 80 
      initialDelaySeconds: 3 # after 3 seconds start health check process
      periodSeconds: 5 # do it in every 5 seconds 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
